--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-  
 {
     "title": "pictionary",
     "name": "pictionary",
@@ -9,11 +8,11 @@
     "description": "drawing fun",
     "dependencies": {
         "bootstrap": "4.3.1",
+        "express": "^4.17.1",
         "jquery": "3.4.1",
         "jquery.easing": "^1.4.1",
         "mysql": "^2.17.1",
-		"express": "4.17.1",
-		"node": "6.4.1",
-		"socket.io": "2.2.0"	
+        "node": "6.4.1",
+        "socket.io": "^2.2.0"
     }
 }
